<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/parent_layout"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginBottom="20dp"
    android:background="@drawable/border">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:id="@+id/shelter_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textSize="30sp"
            android:text="@string/test2"
            />
        <TextView
            android:id="@+id/shelter_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textSize="18sp"
            android:text="@string/test3"
            />
        <!--<TextView-->
            <!--android:id="@+id/shelter_phone_number"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textAppearance="?attr/textAppearanceListItem"-->
            <!--android:textSize="18sp"-->
            <!--android:text="@string/test3"-->
            <!--/>-->
        <!--<TextView-->
            <!--android:id="@+id/shelter_website"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textAppearance="?attr/textAppearanceListItem"-->
            <!--android:textSize="14sp"-->
            <!--android:text="@string/test3"-->
            <!--/>-->
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/service_label"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="8dp"
            android:textAppearance="?attr/textAppearanceListItem"
            android:gravity="right"
            android:text="@string/service_label"
            />
        <View
            android:id="@+id/service_bar"
            android:layout_width="48dp"
            android:layout_height="12dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:background="#FF8184" />
        <TextView
            android:id="@+id/num_service_needs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="5dp"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textSize="18sp"
            android:textColor="#69696B"
            android:text="@string/test3"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/food_label"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="8dp"
            android:textAppearance="?attr/textAppearanceListItem"
            android:gravity="right"
            android:text="@string/food_label"
            />
        <View
            android:id="@+id/food_bar"
            android:layout_width="48dp"
            android:layout_height="12dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:background="#72FF7A" />
        <TextView
            android:id="@+id/num_food_needs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="5dp"
            android:textSize="18sp"
            android:textColor="#69696B"
            android:textAppearance="?attr/textAppearanceListItem"
            android:text="@string/test3"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/supplies_label"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="8dp"
            android:textAppearance="?attr/textAppearanceListItem"
            android:gravity="right"
            android:text="@string/supplies_label"
            />
        <View
            android:id="@+id/supplies_bar"
            android:layout_width="48dp"
            android:layout_height="12dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:background="#6AE0FF" />
        <TextView
            android:id="@+id/num_supply_needs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="5dp"
            android:textSize="18sp"
            android:textColor="#69696B"
            android:textAppearance="?attr/textAppearanceListItem"
            android:text="@string/test3"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/clothing_label"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="8dp"
            android:textAppearance="?attr/textAppearanceListItem"
            android:gravity="right"
            android:text="@string/clothes_label"
            />
        <View
            android:id="@+id/clothing_bar"
            android:layout_width="48dp"
            android:layout_height="12dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:background="#69696B" />
        <TextView
            android:id="@+id/num_clothing_needs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="5dp"
            android:textSize="18sp"
            android:textColor="#69696B"
            android:textAppearance="?attr/textAppearanceListItem"
            android:text="@string/test3"
            />
    </LinearLayout>
</LinearLayout>
