<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ScrollingActivity"
    >
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragment_container"/>
    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="60dp"
        >
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/shelter_detail_view"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="30dp">
                <TextView
                    android:id="@+id/shelter_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textSize="36sp"
                    android:text="@string/test2"
                    />
                <TextView
                    android:id="@+id/shelter_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textSize="18sp"
                    android:text="@string/test3"
                    />
                <TextView
                    android:id="@+id/shelter_phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textSize="18sp"
                    android:text="@string/test3"
                    />
                <TextView
                    android:id="@+id/shelter_website"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textSize="18sp"
                    android:text="@string/test3"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="14dp">
                <TextView
                    android:id="@+id/service_label"
                    android:layout_width="84dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="4dp"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:gravity="right"
                    android:text="@string/service_label"
                    android:textSize="18sp"
                    />
                <View
                    android:id="@+id/service_bar"
                    android:layout_width="48dp"
                    android:layout_height="11dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginLeft="10dp"
                    android:background="#FF8184" />
                <TextView
                    android:id="@+id/num_service_needs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginLeft="5dp"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textSize="16sp"
                    android:textColor="#69696B"
                    android:text="@string/test3"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/food_label"
                    android:layout_width="84dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="4dp"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:gravity="right"
                    android:text="@string/food_label"
                    android:textSize="18sp"
                    />
                <View
                    android:id="@+id/food_bar"
                    android:layout_width="48dp"
                    android:layout_height="11dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginLeft="10dp"
                    android:background="#72FF7A" />
                <TextView
                    android:id="@+id/num_food_needs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginLeft="5dp"
                    android:textSize="16sp"
                    android:textColor="#69696B"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:text="@string/test3"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/supplies_label"
                    android:layout_width="84dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="4dp"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:gravity="right"
                    android:text="@string/supplies_label"
                    android:textSize="18sp"
                    />
                <View
                    android:id="@+id/supplies_bar"
                    android:layout_width="48dp"
                    android:layout_height="11dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginLeft="10dp"
                    android:background="#6AE0FF" />
                <TextView
                    android:id="@+id/num_supply_needs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginLeft="5dp"
                    android:textSize="16sp"
                    android:textColor="#69696B"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:text="@string/test3"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="84dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="4dp"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:gravity="right"
                    android:text="@string/clothes_label"
                    android:textSize="18sp"
                    />
                <View
                    android:id="@+id/clothing_bar"
                    android:layout_width="48dp"
                    android:layout_height="11dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginLeft="10dp"
                    android:background="#69696B" />
                <TextView
                    android:id="@+id/num_clothing_needs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginLeft="5dp"
                    android:textSize="16sp"
                    android:textColor="#69696B"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:text="@string/test3"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="45dp"
                    android:layout_marginTop="8dp"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:gravity="left"
                    android:text="@string/service_label"
                    android:textSize="18sp"
                    />
            </LinearLayout>
            <ListView
                android:id="@+id/service_need_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="60dp"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="12sp"
                android:textColor="#69696B"
                android:divider="@null"
                android:dividerHeight="0dp"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="45dp"
                    android:layout_marginTop="8dp"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:gravity="left"
                    android:text="@string/food_label"
                    android:textSize="18sp"
                    />
            </LinearLayout>
            <ListView
                android:id="@+id/food_need_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="60dp"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="12sp"
                android:textColor="#69696B"
                android:divider="@null"
                android:dividerHeight="0dp"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="45dp"
                    android:layout_marginTop="8dp"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:gravity="center"
                    android:text="@string/supplies_label"
                    android:textSize="18sp"
                    />
            </LinearLayout>
            <ListView
                android:id="@+id/supply_need_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="60dp"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="12sp"
                android:textColor="#69696B"
                android:divider="@null"
                android:dividerHeight="0dp"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/clothing_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="45dp"
                    android:layout_marginTop="8dp"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:gravity="left"
                    android:text="@string/clothes_label"
                    android:textSize="18sp"
                    />
            </LinearLayout>
            <ListView
                android:id="@+id/clothing_need_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="60dp"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="12sp"
                android:textColor="#69696B"
                android:divider="@null"
                android:dividerHeight="0dp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>